feat: Streamingのテストを実施
handlerにストリーム送信のテストを書いた
AI関係ない固定値通信だけのテスト
usecaseのfakeサンプルの通りに書くとAI返答完成
